fix styling on mobile for all error handling containers

--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -167,11 +167,12 @@
   color: #777;
 }
 
-/* Comment new page styling */
-
 .errors-container {
   margin-top: 1.5em;
   color: #f0b138;
+  width: 100%;
+  text-align: center;
+  margin-left: 3px !important;
 }
 
 .errors-list {
