--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -62,12 +62,6 @@
   }
 }
 
-#sign-up-errors {
-  width: 100%;
-  text-align: center;
-  margin-left: 3px;
-}
-
 
 /* User show page styles */
 
